styles/styles.css
body{
	font-family: "Montserrat", sans-serif;
	font: 20px;
	line-height: 1.8;
}

.container-fluid{
	padding: 0px;
	margin: 0px;
}


/* navbar styles*/
.navbar{
	padding-top: 15px;
	padding-bottom: 15px;
	border: 0;
	border-radius: 0;
	margin-bottom: 0;
	font-size: 16px !important;
	transition: 0.6s;
	-webkit-transition: 0.6s; /*for safari*/
	background-color: rgba(255,255,255,0.3);
}

.nav li a, .navbar-header a{
	color: #5B5B5B !important;

}

.nav li a:hover{
	color: #F0AD4E !important;
}

.navbarStateWhenScrolled{
	background-color: #ffffff;
	padding-top: 11px;
	padding-bottom: 11px;
	box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
}

.navbar-menu{
	background-color: rgba(255,255,255,0);
	border: 0px;
}

.navbar-menu:hover{
	background-color: rgba(255,255,255,0) !important;
}

/* home styles*/
.bg-home{
	background: url("../images/books.jpg");
	color: #000;
	background-size: cover;
	display: block;
	padding-top: 70px;
	padding-bottom: 70px;
	padding-right: 10px;
	padding-left: 10px;
	height: 100vh;
}

.bg-home-text{
	color: #5B5B5B;
	position: relative;
	top: 40%;
	transform: translateY(-40%);
}

.bg-home-text h1{

	font-size: 35px;
}

.bg-home-text p{

	font-size: 20px;
}

/* general information styles*/
.bg-info{
	background-color: #ffffff;
	padding-right: 50px;
	padding-left: 50px;
	padding-top: 70px;
	padding-bottom: 70px;
}

.bg-info-text h1{
	font-size: 27px;
	margin-bottom: 50px;
}

.bg-info-text h3{

	font-size: 18px;
}

.bg-info-text p{

	font-size: 16px;
}

/* map styles*/
.bg-map{
	background-color: #ffffff;
}

/* FAQ styles*/
.bg-faq{
	background-color: #ffffff;
	padding-right: 50px;
	padding-left: 50px;
	padding-top: 70px;
	padding-bottom: 70px;
}

.bg-faq-text h1{
	font-size: 27px;
	margin-bottom: 50px;
}

.bg-faq-text h3{

	font-size: 18px;
}

.bg-faq-text p{

	font-size: 16px;
}

/* curriculum styles*/
.bg-curriculum{
	background-color: #F2F5F7;
	padding-right: 50px;
	padding-left: 50px;
	padding-top: 70px;
	padding-bottom: 70px;
}

.bg-curriculum-text h1{
	font-size: 27px;
	margin-bottom: 50px;
}

.bg-curriculum-text h3{

	font-size: 18px;
}

.bg-curriculum-text p{

	font-size: 16px;
}

.bg-curriculum-text li{

	font-size: 16px;
}

/* about styles*/
.bg-about{
	background-color: #ffffff;
	padding-right: 50px;
	padding-left: 50px;
	padding-top: 70px;
	padding-bottom: 70px;
}

.bg-about-text h1{
	font-size: 27px;
	margin-bottom: 50px;
}

.bg-about-text h3{

	font-size: 18px;
}

.bg-about-text p{

	font-size: 16px;
}

.staff-image{
	margin-top: 70px;
	margin-bottom: 10px;
	width: 275px;
}

.clickable{
	transition: 0.2s;
	-webkit-transition: 0.2s;
}

.clickable:hover{
	opacity: 0.8;
	transition: 0.2s;
	-webkit-transition: 0.2s;
	cursor: pointer;
}

/*view staff styles*/
.bg-staff{
	background-image: url("../images/staff-background.jpg");
	background-repeat: no-repeat;
	background-size: cover;
	color: #fff;
	padding-right: 50px;
	padding-left: 50px;
	padding-top: 70px;
	padding-bottom: 70px;
}

.bg-staff-text h1{
	font-size: 27px;
	margin-bottom: 50px;
}

.bg-staff-text h3{
	font-size: 18px;
}

.bg-staff-text p{
	font-size: 16px;
}

.bg-staff-card{
	background-color: #F5F5F5;
	margin: 5px;
	padding: 10px;
	margin-bottom: 15px;
	box-shadow: 0px 7px 10px rgba(0,0,0,0.2);
}

/* contact styles*/
.bg-contact{
	background-color: #F2F5F7;
	padding-right: 50px;
	padding-left: 50px;
	padding-top: 70px;
	padding-bottom: 70px;
}

.bg-contact-text h1{
	font-size: 27px;
	margin-bottom: 50px;
}

.bg-contact-text h3{

	font-size: 18px;
}

.bg-contact-text p{

	font-size: 16px;
}

.social-media-icons{
	width: 27px;
}

/* footer styles*/
.bg-footer{
	background-color: #2f2f2f;
	padding-right: 50px;
	padding-left: 50px;
	padding-top: 70px;
	padding-bottom: 70px;
}

.bg-footer-text{
	color: #ffffff;
	font-size: 16px;
}

